@startuml

title __JPWP-PROJEKT's Class Diagram__\n

  namespace  {
    class CommonFunctions {
    }
  }
  

  namespace  {
    class Game {
    }
  }
  

  namespace  {
    class GameMenu {
    }
  }
  

  namespace  {
    class MainScreen {
    }
  }
  

  namespace  {
    class main {
    }
  }
  

  MainScreen o-- CommonFunctions : functions
  MainScreen o-- Game : game


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
